--- a/shipment-service/src/main/resources/application.properties
+++ b/shipment-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8081
+server.port=0
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
 
@@ -13,11 +13,10 @@ spring.kafka.producer.properties.request.timeout.ms=30000
 spring.kafka.producer.properties.max.in.flight.requests.per.connection=5
 spring.kafka.producer.properties.enable.idempotence=true
 spring.kafka.producer.properties.allow.auto.create.topics=false
-spring.kafka.consumer.group-id=products-ms
+spring.kafka.consumer.group-id=shipment-ms
 spring.kafka.consumer.properties.spring.json.trusted.packages=com.tech.ps.core.*
 spring.kafka.consumer.properties.allow.auto.create.topics=false
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
-
-products.commands.topic.name=products-commands
-products.events.topic.name=products-events
+shipments.commands.topic.name=shipments-commands
+shipments.created.events.topic.name=shipments-events
