--- a/payments-service/src/main/resources/application.properties
+++ b/payments-service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8082
 spring.jackson.deserialization.fail-on-unknown-properties=true
 
 spring.kafka.admin.auto-create=false
-spring.kafka.bootstrap-servers=localhost:9091,localhost:9092,localhost:9093
+spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.producer.acks=all
@@ -14,7 +14,7 @@ spring.kafka.producer.properties.max.in.flight.requests.per.connection=5
 spring.kafka.producer.properties.enable.idempotence=true
 spring.kafka.producer.properties.allow.auto.create.topics=false
 spring.kafka.consumer.group-id=payments-ms
-spring.kafka.consumer.properties.spring.json.trusted.packages=com.appsdeveloperblog.core.*
+spring.kafka.consumer.properties.spring.json.trusted.packages=com.tech.ps.core.*
 spring.kafka.consumer.properties.allow.auto.create.topics=false
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
